add different topologies

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "67b728b3-e491-4254-a820-04be340c0e49",
    "metadata": {},
    "outputs": [
@@ -19,8 +19,7 @@
       "\n",
       "======================================================================\n",
       "📂 LOADING DATA\n",
-      "======================================================================\n",
-      "Original dataset size: (1496586, 16)"
+      "======================================================================\n"
      ]
     },
     {
@@ -36,32 +35,52 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
+      "Original dataset size: (1496586, 16)\n",
       "Original fraud distribution:\n",
       "  Non-fraud: 1421526\n",
       "  Fraud:     75060\n",
       "\n",
       "======================================================================\n",
       "🎯 CREATING 3-CLASS TARGET\n",
-      "======================================================================\n"
-     ]
-    },
-    {
-     "ename": "LoadError",
-     "evalue": "LoadError: UndefVarError: `create_risk_classes` not defined in `Main`\nHint: It looks like two or more modules export different bindings with this name, resulting in ambiguity. Try explicitly importing it from a particular module, or qualifying the name with the module it should come from.\nin expression starting at C:\\Users\\gianluca\\Desktop\\fraud-detections\\main.jl:96",
-     "output_type": "error",
-     "traceback": [
-      "LoadError: UndefVarError: `create_risk_classes` not defined in `Main`\nHint: It looks like two or more modules export different bindings with this name, resulting in ambiguity. Try explicitly importing it from a particular module, or qualifying the name with the module it should come from.\nin expression starting at C:\\Users\\gianluca\\Desktop\\fraud-detections\\main.jl:96",
-      "",
-      "Stacktrace:",
-      " [1] top-level scope",
-      "\u001b[90m   @\u001b[39m \u001b[90mC:\\Users\\gianluca\\Desktop\\fraud-detections\\\u001b[39m\u001b[90m\u001b[4mmain.jl:96\u001b[24m\u001b[39m",
-      " [2] \u001b[0m\u001b[1minclude\u001b[22m\u001b[0m\u001b[1m(\u001b[22m\u001b[90mmapexpr\u001b[39m::\u001b[0mFunction, \u001b[90mmod\u001b[39m::\u001b[0mModule, \u001b[90m_path\u001b[39m::\u001b[0mString\u001b[0m\u001b[1m)\u001b[22m",
-      "\u001b[90m   @\u001b[39m \u001b[90mBase\u001b[39m \u001b[90m.\\\u001b[39m\u001b[90m\u001b[4mBase.jl:307\u001b[24m\u001b[39m",
-      " [3] top-level scope",
-      "\u001b[90m   @\u001b[39m \u001b[90m\u001b[4mIn[2]:1\u001b[24m\u001b[39m",
-      " [4] \u001b[0m\u001b[1meval\u001b[22m\u001b[0m\u001b[1m(\u001b[22m\u001b[90mm\u001b[39m::\u001b[0mModule, \u001b[90me\u001b[39m::\u001b[0mAny\u001b[0m\u001b[1m)\u001b[22m",
-      "\u001b[90m   @\u001b[39m \u001b[90mCore\u001b[39m \u001b[90m.\\\u001b[39m\u001b[90m\u001b[4mboot.jl:489\u001b[24m\u001b[39m"
+      "======================================================================\n",
+      "\n",
+      "📊 Calculating risk signals...\n",
+      "\n",
+      "✅ 3-Class distribution:\n",
+      "  Class 0 (LEGITTIMO): 1347548 (90.0%)\n",
+      "  Class 1 (SOSPETTO): 128384 (8.6%)\n",
+      "  Class 2 (FRAUDOLENTO): 20654 (1.4%)\n",
+      "\n",
+      "======================================================================\n",
+      "✅ TRAIN/TEST SPLIT (80% Train / 20% Test)\n",
+      "======================================================================\n",
+      "\n",
+      "🔄 Balancing dataset...\n",
+      "  Samples per class: 20654\n",
+      "  Balanced dataset size: (61962, 21)\n",
+      "\n",
+      "📊 Split Summary:\n",
+      "  Total samples:     61962\n",
+      "  Training set:      49569 (80%)\n",
+      "  Test set:          12393 (20%)\n",
+      "\n",
+      "🔧 Preprocessing train and test sets...\n",
+      "\n",
+      "📊 Preprocessed Data:\n",
+      "  Features: 8\n",
+      "  Train samples: 49569\n",
+      "  Test samples: 12393\n",
+      "\n",
+      "  Feature names: [\"Transaction Amount\", \"Account Age Days\", \"Transaction Hour\", \"Transaction_Hour\", \"Is_Night\", \"Amount_per_AccountAge\", \"High_Value_Flag\", \"New_Account_Flag\"]\n",
+      "\n",
+      "✅ Cross-validation indices created (3 folds, stratified)\n",
+      "\n",
+      "======================================================================\n",
+      "🔬 EXPERIMENT 1: ARTIFICIAL NEURAL NETWORKS\n",
+      "Testing 8 ANN Topologies\n",
+      "======================================================================\n",
+      "\n",
+      "[1/8] Testing topology: [256, 128, 64]\n"
      ]
     }
    ],
